# actix-clean-path

./: Cargo.toml  readme.md
.github/workflows/: build.yml
src/: lib.rs
